changed tests